Preserve datetimes of incidences created from templates

When the editor applies a template, as identified by the "isTemplate"
property, it (usually) does not copy its start/end/due datetimes;  it
keeps the datetimes set before the template was applied.  Unfortunately
when the instance is saved it still has the "isTemplate" property, and
so when it is edited the editor does not copy its datetimes; the GUI
fields are left with default values.  Removing the property fixes the
bug.

BUG: 332048